--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>¿Me amas?</title>
+  <title>¿Me extrañaaass?</title>
   <style>
     body {
       margin: 0;
@@ -38,7 +38,7 @@
     }
 
     #noBtn {
-      background-color: #888;
+      background-color: #8799ff;
       color: white;
       position: absolute;
     }
@@ -59,7 +59,6 @@
       z-index: 1000;
     }
 
-    /* Corazones */
     .corazon {
       position: absolute;
       width: 20px;
@@ -104,7 +103,6 @@
       }
     }
 
-    /* Brillitos */
     .sparkle {
       position: absolute;
       width: 6px;
@@ -129,16 +127,22 @@
 </head>
 <body>
 
-  <h1>¿Me amas?</h1>
+  <h1>¿Me extrañaasss🥺❤️?</h1>
 
   <button class="btn" id="yesBtn">Sí 💖</button>
   <button class="btn" id="noBtn" style="top: 60%; left: 45%;">No 💔</button>
 
-  <div id="note">¡Sabía que dirías que sí jiji, Hola mi niño bonito, paso a recordarte lo muchisimo que te amo y lo importante que eres para mi vida, desde que te conocí, mi mundo cambió. Tu sonrisa ilumina mis días y tu forma de ser me hace quererte cada vez más. 
-. Gracias por ser tú, por estar aquí conigo siempre, por brindarme toda tu confinza, no pararía de decirte cuanto te amo, no dejaré de hacerlo bebé, eres muy especial en mi vida, me di un poco de tiempito para poder hacer esto que ya desde hace mucho quieria hacerlo, pero no se me daba la oportunidad jiji, me gusta verte feliz siempre siempre y quiero que siempre nos tengamos en mente,  se que el apoyo mutuo siempre va a existir mi vida, te amo con todo mi ser, me encanta que eres un niño muy inteligente muy dedicado en todas las cositas que haces, me encanta tu forma de ser y la forma en la que eres conmigo, siempre voy a recordarte que tienes que dar lo mejor de ti y siempre voy a ayudarte en todo lo posible y lo imposible, al finla todo se puede lograr, se que podemos llegar muy lejos si nos lo proponemos y damos lo mejor para nosotros corazon, i love you bebe!'! 😍</div>
+  <div id="note">
+    ¡Sabía que dirías que sí jiji, porque yo también te extraño bastante!<br>
 
-  <!-- 🎵 Música de fondo -->
-  <audio id="bgMusic" src="C:\Users\abisa\Downloads\cancion.mp3.mp3" loop></audio>
+    Hola mi niño bonito, paso a recordarte lo muchísimo que te amo y lo importante que eres para mi vida, desde que te conocí, mi mundo cambió. Tu sonrisa ilumina mis días y tu forma de ser me hace quererte cada vez más. 
+. Gracias por ser tú, por estar aquí conmigo siempre, por brindarme toda tu confianza, no pararía de decirte cuanto te amo, no dejaré de hacerlo bebé, eres muy especial en mi vida, me di un poco de tiempito para poder hacer esto que ya desde hace mucho quería hacerlo, pero no se me daba la oportunidad jiji, me gusta verte feliz siempre siempre y quiero que siempre nos tengamos en mente,  se que el apoyo mutuo siempre va a existir mi vida, te amo con todo mi ser, me encanta que eres un niño muy inteligente muy dedicado en todas las cositas que haces, me encanta tu forma de ser y la forma en la que eres conmigo, siempre voy a recordarte que tienes que dar lo mejor de ti y siempre voy a ayudarte en todo lo posible y lo imposible, al final todo se puede lograr, se que podemos llegar muy lejos si nos lo proponemos y damos lo mejor para nosotros corazón, i love you bebe!.<br><br>
+    Eres el mejor, en ABSOLUTAMENTE TODO!!<br><br>
+    Te amo con todo mi ser. 💞
+  </div>
+
+  <!-- Música de fondo -->
+  <audio id="bgMusic" src="c:\Users\abisa\Downloads\fondo.mp3.mp3" loop></audio>
 
   <script>
     const noBtn = document.getElementById("noBtn");
@@ -146,7 +150,17 @@
     const note = document.getElementById("note");
     const music = document.getElementById("bgMusic");
 
-    // Botón "No" se mueve
+    // Reproducir música tras la primera interacción táctil (necesario en móviles)
+    function enableAudio() {
+      music.play().catch(() => {});
+      document.removeEventListener('click', enableAudio);
+      document.removeEventListener('touchstart', enableAudio);
+    }
+
+    document.addEventListener('click', enableAudio);
+    document.addEventListener('touchstart', enableAudio);
+
+    // Botón No se mueve
     noBtn.addEventListener("mouseenter", () => {
       const x = Math.random() * (window.innerWidth - 100);
       const y = Math.random() * (window.innerHeight - 50);
@@ -154,12 +168,12 @@
       noBtn.style.top = `${y}px`;
     });
 
-    // Botón "Sí"
+    // Botón Sí
     yesBtn.addEventListener("click", () => {
       note.style.display = "block";
       music.play();
 
-      // Corazones flotantes
+      // Corazones
       setInterval(() => {
         const heart = document.createElement("div");
         heart.classList.add("corazon");
@@ -169,7 +183,7 @@
         setTimeout(() => heart.remove(), 10000);
       }, 300);
 
-      // Brillitos flotantes
+      // Brillitos
       setInterval(() => {
         const sparkle = document.createElement("div");
         sparkle.classList.add("sparkle");
